# yaragen

./: .gitignore  AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SOURCES.md  install.ps1  install.sh  layman.md  livesearch.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  greetings.yml  label.yml  release.yml  stale.yml
demos/01-basic/: SCENARIO.md  sample.txt
demos/02-clean/: SCENARIO.md  sample.txt
demos/03-mixed/: SCENARIO.md
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md  INTEGRATIONS.md
examples/: help.txt  version.txt
integrations/: README.md  webhook.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
scripts/: bench.sh  dev-bootstrap.sh  docker-build.sh  install-prereqs.sh  lint.sh  ports-test.sh  release.sh  run-demo.sh  setup-linux.sh  setup-macos.sh  setup-ubuntu.sh  setup-windows.ps1
tests/: test_connect.py  test_smoke.py
yaragen/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
