[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-yaragen"
version = "0.1.0"
description = "Generate candidate YARA rules from sample files/strings"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "secops", "yaragen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/yaragen"

[project.scripts]
yaragen = "yaragen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["yaragen"]
